# privateScore

./: .env.example  .gitignore  Anchor.toml  package-lock.json  package.json
app/: package-lock.json  package.json
circuits/prove_creditworthy/: Nargo.toml  Prover.toml
circuits/prove_creditworthy/src/: main.nr
circuits/prove_dti_ratio/: nargo.toml  prover.toml
circuits/prove_dti_ratio/src/: main.nr
circuits/prove_payment_history/: nargo.toml  prover.toml
circuits/prove_payment_history/src/: main.nr
circuits/prove_score_improved/: nargo.toml  prover.toml
circuits/prove_score_improved/src/: main.nr
circuits/prove_score_threshold/: nargo.toml  prover.toml
circuits/prove_score_threshold/src/: main.nr
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/borrow/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ScoreDisplay.tsx
frontend/hooks/: usePrivateScore.ts
frontend/lib/: constants.ts  creditScore.ts  helius.ts  zkProof.ts
programs/private-score/: Cargo.toml
programs/private-score/src/: errors.rs  lib.rs
programs/private-score/src/instructions/: borrow_standard.rs  deposit.rs  grant_viewing_access.rs  initialize_pool.rs  liquidate.rs  mod.rs  register_credit.rs  repay.rs  revoke_viewing_access.rs  update_credit.rs  verify_and_borrow.rs  withdraw.rs
programs/private-score/src/state/: credit_record.rs  lender_position.rs  lending_pool.rs  loan.rs  mod.rs  viewing_key.rs
tests/: private-score.ts
