[package]
name = "privatescore"
version = "0.1.0"
description = "Privacy-preserving credit scoring for Solana DeFi"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/privatescore"

[lib]
crate-type = ["cdylib", "lib"]
name = "privatescore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
light-sdk = { version = "0.11.0", optional = true }
solana-program = "1.18"

[dev-dependencies]
anchor-client = "0.30.1"
